# flaxum_api

./: .env.overwrite  .gitignore  Cargo.toml  README.md
apps/server/: Cargo.toml
apps/server/db/migrations/: 20241016143845_init_db.sql
apps/server/src/: config.rs  env.rs  lib.rs  logger.rs  main.rs  route.rs
apps/server/src/db/: mod.rs
apps/server/src/domain/: mod.rs
apps/server/src/domain/auth/: handler.rs
apps/server/src/domain/object/: handler.rs  model.rs
apps/server/src/domain/user/: model.rs
apps/server/src/error/: app.rs  mod.rs
apps/server/src/utils/: jwt.rs
deploy/: docker-compose.yml
file_worker/: Cargo.toml
file_worker/src/: db.rs  env.rs  lib.rs  rabbitmq.rs  s3.rs
flaxum/: Cargo.toml
flaxum/db/migrations/: 20241016143845_init_db.sql
flaxum/src/: lib.rs  logger.rs  main.rs  scalar.rs
flaxum/src/config/: database.rs  env.rs  mod.rs  rabbitmq.rs  s3.rs
flaxum/src/db/: mod.rs
flaxum/src/dto/: mod.rs  object.rs  robot.rs  token.rs  user.rs  uxo.rs
flaxum/src/entity/: mod.rs  object.rs  robot.rs  robot_object.rs  user.rs
flaxum/src/error/: api_error.rs  backend_error.rs  id_error.rs  mod.rs  s3_error.rs
flaxum/src/middleware/: auth.rs  mod.rs
flaxum/src/repository/: mod.rs  object_repository.rs  robot_object_repository.rs  robot_repository.rs  s3_repository.rs  user_repository.rs  uxo_repository.rs
flaxum/src/response/: api_response.rs
flaxum/src/routes/: mod.rs  root.rs
flaxum/src/routes/admin_object/: handler.rs  mod.rs
flaxum/src/routes/admin_robot/: handler.rs  mod.rs
flaxum/src/routes/admin_user/: handler.rs  mod.rs
flaxum/src/routes/auth/: handler.rs
flaxum/src/routes/object/: handler.rs  mod.rs
flaxum/src/routes/user/: handler.rs
flaxum/src/routes/uxo/: handler.rs  mod.rs
flaxum/src/service/: mod.rs  object_service.rs  robot_object_service.rs  robot_service.rs  token_service.rs  user_service.rs  uxo_service.rs
flaxum/src/state/: auth_state.rs  mod.rs  object_state.rs  robot_state.rs  token_state.rs  user_state.rs
flaxum/src/utils/: crypto.rs
postman/: collection_07_12_2024.json
server/: Cargo.toml
server/db/migrations/: 20241016143845_init_db.sql
server/src/: common.rs  config.rs  env.rs  lib.rs  logger.rs  main.rs  route.rs
server/src/config/: database.rs  env.rs  mod.rs  parameter.rs  s3.rs
server/src/db/: mod.rs
server/src/db/crud/: mod.rs  objects.rs  userxobjects.rs
server/src/db/crud/commons/: pagination.rs
server/src/domain/: main_app.rs  mod.rs
server/src/domain/access/: handler.rs
server/src/domain/auth/: handler.rs
server/src/domain/object/: handler.rs  mod.rs  model.rs  route.rs
server/src/domain/user/: handler.rs  model.rs  route.rs
server/src/domain/uxo/: handler.rs  route.rs
server/src/dto/: mod.rs  object.rs  user.rs  uxo.rs
server/src/entity/: mod.rs  object.rs  user.rs
server/src/error/: api_error.rs  app.rs  backend_error.rs  db_error.rs  io_error.rs  mod.rs  request_error.rs  token_error.rs  user_error.rs
server/src/middleware/: auth.rs
server/src/repository/: mod.rs  object_repository.rs  s3_repository.rs  user_repository.rs  uxo_repository.rs
server/src/response/: api_response.rs
server/src/routes/: main_app.rs  mod.rs  root.rs
server/src/routes/admin_object/: handler.rs  mod.rs
server/src/routes/admin_user/: handler.rs  mod.rs
server/src/routes/auth/: handler.rs  mod.rs  route.rs
server/src/routes/object/: handler.rs  mod.rs
server/src/routes/user/: handler.rs  mod.rs
server/src/routes/uxo/: handler.rs  route.rs
server/src/service/: mod.rs  object_service.rs  token_service.rs  user_service.rs  uxo_service.rs
server/src/state/: mod.rs  object_state.rs  user_state.rs
server/src/utils/: crypto.rs  jwt.rs  mod.rs  watcher.rs
