[package]
name = "file_worker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"

tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter"] }
tracing = "0.1.41"

dotenv = "0.15.0"
dotenvy = "0.15.7"
async-trait = "0.1"
tokio = { version = "1.43.0", features = ["full"] }

aws-sdk-s3 = "1.74.0"
aws-config = { version = "1.5.16", features = ["behavior-version-latest"] }

sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros", "uuid", "runtime-async-std-native-tls", "chrono"] }

serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

amqprs = { version = "1.5.3", features = ["traces"] }

aes = "0.8"
ctr = "0.9"
hex = "0.4"
rand = "0.9"
sha2 = "0.10.8"