[package]
name = "flaxum"
version = "0.1.0"
edition = "2021"

[dependencies]
file_worker = {path = "../file_worker"}

rand = "0.9.0"
chrono = { version = "0.4.39", features = ["serde"]}
bytes = "1.10.0"
futures = "0.3.31"

thiserror = "2.0.11"
anyhow = "1.0.95"

argon2 = "0.5.3"

tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["io"] }

hyper = { version = "1.6.0", features = ["full"] }

tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "limit", "cors"] }

axum = { version = "0.8.1", features = ["macros", "multipart"] }
axum-extra = { version = "0.10.0", features = ["cookie", "multipart", "query", "typed-header"] }
axum-core = "0.5.0"

dotenv = "0.15.0"
dotenvy = "0.15.7"

http = "1.2.0"
http-body-util = "0.1.2"

jsonwebtoken = "9.3.1"

uuid = { version = "1.13.1", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }

serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros", "uuid", "runtime-async-std-native-tls", "chrono"] }

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter"] }
log = "0.4.25"

url = "2.5.4"

aws-config = { version = "1.5.16", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.74.0"

notify = "8.0.0"
passwords = "3.1.16"

amqprs = { version = "1.5.3", features = ["traces"] }

aes = "0.8"
ctr = "0.9"
hex = "0.4"
sha2 = "0.10.8"