[package]
name = "rust_file_share"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = {version = "0.7.7", features = ["multipart"]}
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["limit"] }
