[package]
name = "rust_file_share"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.89"
argon2 = "0.5.3"
axum = {version = "0.7.7", features = ["multipart"]}
axum-extra = { version = "0.9.4", features = ["cookie", "multipart"] }
bytes = "1.7.2"
chrono = { version = "0.4.37", features = ["serde"]}
dotenv = "0.15.0"
dotenvy = "0.15.7"
http = "1.1.0"
http-body-util = "0.1.2"
jsonwebtoken = "9.3.0"
lazy_static = "1.5.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.130"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros", "uuid", "runtime-async-std-native-tls", "chrono"] }
thiserror = "1.0.64"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["chrono", "env-filter"] }
url = "2.5.2"

utoipa = { version = "5.1.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.0.1", features = ["axum"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
validator = { version = "0.18.1", features = ["derive"] }
